added space on description

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                     >%
                   </ol>
                   <ol>
-                    Description:<span id="description">Cloudy</span>
+                    Description:
+                    <span id="description">Cloudy</span>
                   </ol>
                 </ul>
                 <div class="weather-forecast" id="weather"></div>
